# query-engine

./: Cargo.toml  Readme.md
query-engine/: Cargo.toml
query-engine/src/: columnar_value.rs  prelude.rs  query_planner.rs
query-engine/src/logical_plan/: logical_expression.rs  optimizer.rs
query-engine/src/physical_plan/: mod.rs
query-engine/src/tests/: mod.rs
src/: column_vector.rs  columnar_value.rs  data_source.rs  dataframe.rs  error.rs  lib.rs  prelude.rs  query_planner.rs  record_batch.rs  schema.rs
src/logical_plan/: logical_expression.rs  mod.rs
src/physical_plan/: expressions.rs  mod.rs  physical_expressions.rs
src/tests/: mod.rs
